[package]
name = "qwsak"
version = "0.1.3"
edition = "2021"
authors = ["Jürgen Legler <jogihoogi@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jogi1/qwsak"
repository = "https://github.com/jogi1/qwsak"
description = """
quakeworld swiss army knife, a collection of usefull functionalities.
"""

[dependencies]
clap = { version = "3.2.23", features = ["derive", "cargo"] }
quakeworld = { git = "https://github.com/jogi1/quakeworld", branch = "main", features = ["ascii_strings"] }
serde_json = "1.0.87"
simple-error = "0.2.3"
