[package]
name = "qwsak"
version = "0.1.5"
edition = "2021"
authors = ["Jürgen Legler <jogihoogi@gmail.com>"]
license = "MIT"
homepage = "https://github.com/jogi1/qwsak"
repository = "https://github.com/jogi1/qwsak"
keywords = ["quakeworld", "quake"]
description = """
quakeworld swiss army knife, a collection of usefull functionalities.
"""

[dependencies]
clap = { version = "4.0.27", features = ["derive", "cargo"] }
quakeworld = { version = "0.2.2", features = ["ascii_strings", "trace"] }
serde_json = "1.0.87"
simple-error = "0.2.3"
